# ai-whisper-translator

./: .gitignore  CLAUDE.md  README.md  README_ZH.md  STRUCTURE.md  pyproject.toml  test_gui.py  test_gui_tabs.py  test_whisper_cpp.py
.claude/: settings.local.json
docs/: CODE_QUALITY_ISSUES.md  CODE_REVIEW_ISSUES.md  CODE_REVIEW_ISSUES_ZH.md  TECHNICAL.md  TECHNICAL_ZH.md  packaging.md
docs/plans/: 2026-03-08-develop-mode-logging-design.md  2026-03-08-develop-mode-logging-implementation-plan.md  2026-03-08-readme-rewrite-design.md  2026-03-08-readme-rewrite-implementation-plan.md  2026-03-08-refactor-design.md  2026-03-08-refactor-implementation-plan.md  2026-03-08-uv-adoption-design.md  2026-03-08-uv-adoption-implementation-plan.md  2026-03-12-single-page-asr-translate-design.md  2026-03-12-single-page-asr-translate-implementation-plan.md  2026-03-15-codebase-quality-implementation-plan.md  2026-03-15-codebase-quality-improvement-plan.md  2026-03-15-const-me-windows-whispercpp-macos-design.md  2026-03-15-const-me-windows-whispercpp-macos-implementation-plan.md  2026-03-15-pyinstaller-release-no-model-implementation-plan.md  translation-runtime-callgraph.md
packaging/: update_asr_config.py
packaging/macos/: build-whisper-cpp.sh  onboarding-whisper-cpp.sh  pyinstaller.spec
packaging/windows/: build-release.ps1  build-whisper-cpp.ps1  pyinstaller.spec  setup-whisper-cpp.ps1
src/: main.py
src/application/: asr_coordinator.py  dependency_health.py  endpoint_policy.py  events.py  models.py  path_validation.py  settings_models.py  (+1 more)
tests/: conftest.py
(+73 files in other folders)
