[project]
name = "ai-whisper-translator"
version = "0.1.0"
description = "Desktop SRT subtitle translator using local Ollama models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pysrt>=1.1.2",
  "tkinterdnd2>=0.3.0",
  "yt-dlp>=2023.11.16",
  "numpy>=1.24.0",
  "soundfile>=0.12.1",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]
